Correct CSS overflow for Contact section

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,9 +1,7 @@
 .contact {
-  align-items: center;
   background-image: url(../../images/backgrounds/contact.jpg);
   background-size: cover;
   display: flex;
-  height: 100%;
 
   > .col {
     padding: 150px 0 150px 0;
